fixed responsive breaking on small mobiles and tablets, created a css folder, fixed size issue on restaurant titles

--- a/assets/css/restaurants.css
+++ b/assets/css/restaurants.css
@@ -1,42 +1,3 @@
-:root {
-  /* FONT VARIABLES */
-
-  --font-shrikhand: "Shrikhand", cursive;
-  --font-roboto: "Roboto", sans-serif;
-  --font-light: 300;
-  --font-medium: 500;
-  --font-bold: 700;
-
-  /* COLOR VARIABLES */
-
-  --color-background: hsl(0, 0%, 97%);
-  --color-background-light: hsl(0, 0%, 100%);
-  --color-background-dark: hsl(0, 0%, 92%);
-
-  /* SMALL BUTTON HOVER AND "NEW" BUTTON BG */
-  --color-mint-green: hsl(165, 56%, 74%);
-
-  /* ROUND NUMBER BUTTON BG*/
-  --color-purple: hsl(267, 66%, 60%);
-
-  --color-gradient-purple: linear-gradient(
-    200.64deg,
-    hsl(267, 66%, 60%) -5.2%,
-    hsl(317, 100%, 74%) 110.74%
-  );
-
-  --color-text-main: hsl(0, 0%, 0%);
-  --color-text-green: hsl(165, 100%, 26%);
-
-  /* FOOTER TEXT AND BG COLORS */
-  --color-text-second: hsl(0, 0%, 100%);
-  --color-footer-grey: hsl(0, 0%, 21%);
-
-  /* BOX SHADOW */
-  --shadow-buttonshadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-  --shadow-buttonshadow-hover: 0px 4px 15px rgba(0, 0, 0, 0.5);
-}
-
 .header--restaurants {
   background-color: var(--color-background-light);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
@@ -77,7 +38,7 @@
   margin: 0;
   font-family: "Shrikhand", cursive;
   font-weight: 400;
-  font-size: 28px;
+  font-size: 22px;
   line-height: 41px;
   display: flex;
   align-items: center;
@@ -234,7 +195,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
   main {
     display: flex;
     flex-direction: column;
@@ -250,6 +211,7 @@
   .restaurantpage__title {
     padding: 3rem;
     justify-content: center;
+    font-size: 28px;
   }
 
   .restaurantpage__wrapper {
