--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -441,6 +441,7 @@ header {
   z-index: 2;
   top: -0.8rem;
   background: transparent;
+  cursor: pointer;
 }
 
 .fa-heart {
@@ -460,7 +461,7 @@ header {
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 0;
-  transition: all 1s ease-in-out;
+  transition: all 2s ease-in-out;
   background-image: linear-gradient(
     to top,
     rgb(147, 86, 220),
@@ -509,9 +510,9 @@ footer a {
   padding-right: 0.4rem;
 }
 
-/* MEDIA QUERIES */
+/* DESKTOP MEDIA QUERIES */
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
   .functioning {
     margin: 2rem 0 2rem 0;
   }
@@ -529,6 +530,7 @@ footer a {
 
   .functioning__container {
     max-width: 20.1rem;
+    margin: 1rem 2rem;
   }
 
   .restaurant__card {
@@ -538,7 +540,7 @@ footer a {
   }
 
   .restaurantcard__heart {
-    margin-left: 1rem;
+    margin-left: 0.5rem;
   }
 
   .restaurants {
